# modular

./: .bazelignore  .bazelrc  .bazelversion  .buildifier.json  .gitignore  .pre-commit-config.yaml  AI_TOOL_POLICY.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  bazelw  c-abi-proposal.md  context7.json  mypy.ini  pyproject.toml
bazel/: api.bzl  common.MODULE.bazel  config.bzl  modular_wheel_repository.bzl  mojo.MODULE.bazel  mojo_aliases.bzl
bazel/docs/: usage.md
bazel/internal/: BUILD.bazel  GTestMainObjcPoolCheck.cpp  bazel-debug.sh  binary_test.bzl  common.bazelrc  config.bzl  create_venv.py  find_tests_missing_on_ci.py  link_hack.bzl  lit.bzl  load_bazel_tools.py  mef.bzl  modular_cc_test.bzl  modular_clang_tidy_test.bzl  modular_multi_py_version_test.bzl  modular_py_binary.bzl  modular_py_library.bzl  modular_py_test.bzl  modular_py_venv.bzl  modular_run_binary_test.bzl  modular_shared_library.bzl  modular_sphinx_docs.bzl  modular_strip_binary.bzl  modular_versioned_expand_template.bzl  mojo_collect_deps_aspect.bzl  mojo_doc.bzl  mojo_filecheck_test.bzl  mojo_library.bzl  mojo_shared_library.bzl  mojo_test.bzl  mojo_test_environment.bzl  mojodoc_api_href.py  mojodoc_json_to_markdown.py  py_repl.bzl  pytest-shard.py  pytest_runner.py  sitecustomize.py  sphinx.py  test_mojodoc_api_href.py  test_resources.bzl
bazel/internal/cc-toolchain/: BUILD.bazel  collect-cc-coverage.sh  macos_sysroot_repository.bzl
bazel/internal/llvm-lit/: BUILD.bazel  lit.common.cfg.py  lit.common.configured.in  validate_lit_features.py
bazel/internal/mojodoc-templates/: macros.jinja  mojodoc_function.md  mojodoc_module.md  mojodoc_struct.md
bazel/lint/: .markdownlint.yaml  .rumdl.toml  BUILD.bazel  action-versions-pinned.py  buildifier-tables-add.json  buildifier_wrapper.py  check_licenses.mojo  format-fast-wrapper.sh  format-wrapper.sh  lint_docstrings.py  lint_helpers.py  lint_unused_lit_directives.py  linter.bzl  linter_wrapper.sh  markdownlint-wrapper.sh  mblack-wrapper.py  package-lock.json  package.json  pnpm-lock.yaml  ruff-wrapper.sh  ruff_wrapper.py  rumdl_wrapper.py  shellcheck-wrapper.sh  shellcheck_wrapper.py
bazel/pip/: blackwell_bench_wheels.bzl  mypy.bzl
bazel/pip/blackwell_bench/: BUILD.bazel
bazel/pip/pycross/: BUILD.bazel  dependency.py  download.py  generate.py  package.py  pip_platform.py  render.py  template.py  test_dependency.py  test_pip_platform.py  test_render.py  test_vllm_and_sglang.py
bazel/pip/pydeps/: import_dependency_compare.py  pydeps_test.bzl  pydeps_test.py  python_module.py
bazel/pip/requirements/: BUILD.bazel  pycross_lock_file.bzl  pyproject.toml  uv-lock.sh  uv-wrapper.sh
bazel/public-patches/: asio.BUILD  bazel_clang_tidy_config.patch  clang.BUILD  cuda_cudart.BUILD  efa_libfabric_prebuilt.BUILD  grpc-loads.patch  nixl_upstream.BUILD  protobuf-cc-loads.patch  rules_cc_allowlists.patch  rules_cc_set_soname.patch  rules_cc_textual_hdrs.patch  rules_mojo_split_wheel.patch  rules_pycross_exports.patch  rules_pycross_loads.patch  rules_pycross_uv_revert.patch  rules_pycross_versions.patch  rules_python_3_14.patch  tomlplusplus-visibility.patch  torch-cuda-deps.patch  ucx_prebuilt.BUILD  xgrammar.BUILD
examples/custom-graph-module/: BUILD.bazel
examples/max-graph/: BUILD.bazel  addition.py
examples/offline-inference/: BUILD.bazel
examples/pytorch_custom_ops/: BUILD.bazel  custom_op_example.bzl
examples/pytorch_custom_ops/operations/: fused_attention.mojo
max/: BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  README.md  development.md
max/compiler/src/: BUILD.bazel  __init__.mojo
max/docs/: README.md  accuracy-debugging.md  contributing-models.md  development.md  kernel-benchmarking.md  kernel-profiling.md  max-benchmarking.md  op-logging.md  profiling.md  pytorch-to-max-mapping-guide.md  why-bazel.md
max/docs/design-docs/: README.md  amd-printf-lessons-learned.md  elementwise-ops.md  fp8-support-in-mojo.md  genai-paged-attention.md  matmul-on-blackwell-part-1.md  matmul-on-blackwell-part-2.md  matmul-on-blackwell-part-3.md  matmul-to-flash-attention.md  multi-head-flash-attention.md  multi-head-latent-attention.md  token-sampling.md  uwgmma-flash-decoding.md  wgmma-programming.md
max/examples/: README.md
max/examples/capi/: .gitignore  BUILD.bazel  README.md  example.c  graph_capture.c  pixi.toml  safetensors_example.c  test_capi.py  test_graph_capture.py  test_safetensors_capi.py  test_weights_capi.py  weights_example.c
max/examples/cloud-configs/: README.md
max/examples/custom-graph-module/: BUILD.bazel  main.py  mlp.py
max/examples/custom-models/: README.md  pixi.toml
max/examples/custom_ops/: .gitignore  BUILD.bazel  README.md  addition.py  benchmarks.mojo  causal_conv1d.py  custom_op_example.bzl  eager_vector_addition.py  fused_attention.py  histogram.py  image_pipeline.py  mandelbrot.py  matrix_multiplication.py  parametric_addition.py  pixi.toml  top_k.py  vector_addition.py
max/examples/diffusion/: BUILD.bazel  flux2_comparison.py  profiler.py  simple_offline_generation.py  vae_decode_compare.py  vae_decode_timing.py  wan_comparison.py  wan_mem_repro.py
max/examples/embedding-architecture/: pixi.toml
max/examples/embedding-knowledge-base/: README.md
max/examples/max-graph/: BUILD.bazel  README.md
max/examples/modules/: BUILD.bazel  modules.py  pixi.toml
max/examples/offline-inference/: BUILD.bazel  basic.py
max/examples/pytorch_custom_ops/: BUILD.bazel  README.md  addition.py  custom_op_example.bzl  graph.py  grayscale.py  torch-grayscale.py  whisper.py
max/internal/: BUILD.bazel
max/kernels/: CLAUDE.md  CONTRIBUTING.md  README.md
max/kernels/benchmarks/: BUILD.bazel  README.md
max/kernels/cursor_docs/: TILETENSOR_MHA_FINDINGS.md
max/pipelines/: requirements.txt
max/tests/: BUILD.bazel
mojo/docs/: BUILD.bazel  README.md  build_version.js.tmpl  changelog-released.md  changelog.md  faq.md  index.mdx  lib.mdx  nightly-changelog.md  post-process-mojodocs.py  redirects.js  requirements.mdx  roadmap.mdx  sidebars.js  vision.mdx  write-nightly-release.py
(+8036 files in other folders)
